--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "xin-glass-mobile",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://F9329009.github.io/xin-glass-mobile",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
