--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,11 +28,13 @@ jobs:
           persist-credentials: false
 
       # 下载依赖并编译
+      # vue项目为npm run build
+      # react项目为npm run-script build
       - name: npm install and build 🔧
         # 执行下载和编译命令
         run: |
           npm install
-          npm run build
+          npm run-script build
         env:
           CI: true
 
